fixed overflow issue;

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -25,6 +25,7 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .copyright {
