--- a/src/components/Highlights.css
+++ b/src/components/Highlights.css
@@ -24,6 +24,7 @@
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: center;
+  overflow: hidden;
 }
 
 .Pretext {
