--- a/src/components/Notification.css
+++ b/src/components/Notification.css
@@ -31,6 +31,7 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .NotifBox {
